deploy/istio/backend-orange-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-backend-orange
  labels:
    app: podinfo-backend
    color: orange
spec:
  replicas: 3
  selector:
    matchLabels:
     app: podinfo-backend
     color: orange
  template:
    metadata:
      labels:
        app: podinfo-backend
        color: orange
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: quay.io/stefanprodan/podinfo:0.6.0-rc.3
        command:
          - ./podinfo
          - -port=9898
          - -logLevel=debug
        ports:
        - name: http
          containerPort: 9898
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
