deploy/istio/blue-dep.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-blue
  labels:
    app: podinfo
    color: blue
spec:
  replicas: 3
  selector:
    matchLabels:
     app: podinfo
     color: blue
  template:
    metadata:
      labels:
        app: podinfo
        color: blue
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: quay.io/stefanprodan/podinfo:0.6.0-rc.3
        command:
          - ./podinfo
          - -port=9898
          - -logLevel=debug
        ports:
        - name: http
          containerPort: 9898
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
