deploy/istio/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-backend
  labels:
    app: podinfo-backend
spec:
  type: ClusterIP
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: podinfo-backend
