deploy/istio/podinfo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
  labels:
    app: podinfo
spec:
  type: NodePort
  ports:
    - name: http
      port: 9898
      targetPort: http
      protocol: TCP
  selector:
    app: podinfo
