deploy/istio/store-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-store
  labels:
    app: podinfo-store
spec:
  type: ClusterIP
  ports:
    - port: 9898
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: podinfo-store
