deploy/istio/backend-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo-backend
spec:
  hosts:
  - podinfo-backend
  http:
  # new version
  # forward 100% of the traffic to orange
  - match:
#    - headers:
#        x-api-version:
#          regex: "^(v{0,1})0\\.6\\.([0-9]{1,3}).*"
    - sourceLabels:
        color: blue
    route:
    - destination:
        host: podinfo-backend
        subset: orange
    timeout: 20s
  # default route
  # forward 100% of the traffic to grey
  - route:
    - destination:
        host: podinfo-backend
        subset: grey
    timeout: 20s
