deploy/istio/frontend-destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: podinfo
spec:
  host: podinfo
  subsets:
  - name: blue
    labels:
      color: blue
  - name: green
    labels:
      color: green
