deploy/istio/frontend-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo
spec:
  hosts:
  - "podinfo.istio.weavedx.com"
  gateways:
  - public-gateway.istio-system.svc.cluster.local
  http:
  # Opera: forward 100% of the traffic to green
  - match:
    - headers:
        user-agent:
          regex: ".*OPR.*"
    route:
     - destination:
        host: podinfo
        subset: green
    timeout: 30s
  # Chrome: 50/50 load balancing between blue and green
  - match:
    - headers:
        user-agent:
          regex: ".*Chrome.*"
    route:
     - destination:
        host: podinfo
        subset: blue
       weight: 50
     - destination:
        host: podinfo
        subset: green
       weight: 50
    timeout: 30s
  # Safari: 70/30 load balancing between blue and green
  - match:
    - headers:
        user-agent:
          regex: "^(?!.*Chrome).*Safari.*"
    route:
     - destination:
        host: podinfo
        subset: blue
       weight: 70
     - destination:
        host: podinfo
        subset: green
       weight: 30
    timeout: 30s
  # Any other browser: forward 100% of the traffic to blue
  - route:
    - destination:
        host: podinfo
        subset: blue
    timeout: 35s
