deploy/istio/store-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: podinfo-store
spec:
  hosts:
  - podinfo-store
  http:
  - match:
    - sourceLabels:
        color: orange
    route:
    - destination:
        host: podinfo-store
    timeout: 15s
    fault:
      delay:
        percent: 50
        fixedDelay: 500ms
      abort:
        percent: 50
        httpStatus: 500
  - route:
    - destination:
        host: podinfo-store
    timeout: 15s
